# tate-py

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
src/: lib.rs
tests/: test_tate_py.py
