[package]
name = "tate-py"
version = "1.1.1"
edition = "2021"
description = "Python bindings for tate — structured data version control"
license = "MIT"
repository = "https://github.com/j-yang/tate-py"

[lib]
name = "tate_py"
crate-type = ["cdylib"]

[dependencies]
tate = { version = "1", features = ["serde"] }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = "1"
